Fix icon alignment

--- a/client/blocks/inline-help/style.scss
+++ b/client/blocks/inline-help/style.scss
@@ -356,6 +356,7 @@
 		line-height: 1.4;
 		display: block;
 		padding: 8px 16px;
+		font-size: $font-body-small;
 
 		&:after {
 			content: ':';
