--- a/client/my-sites/customer-home/cards/features/help-search/style.scss
+++ b/client/my-sites/customer-home/cards/features/help-search/style.scss
@@ -95,6 +95,8 @@ $min_results_height: 180px;
 
 			.gridicon {
 				margin: 0 5px -3px 0;
+					position: relative;
+					top: 0;
 			}
 
 			&:hover,
